--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>RestAssuredSkeleton</groupId>
     <artifactId>Skeleton</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -34,9 +33,9 @@
                 <version>2.9</version>
                 <configuration>
                     <reportVersion>2.4.1</reportVersion>
-                    <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
+                    <!--<argLine>-->
+                    <!-- -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
+                    <!--</argLine>-->
                 </configuration>
                 <dependencies>
                     <dependency>
